--- a/_pages/about.html
+++ b/_pages/about.html
@@ -28,54 +28,80 @@ description:
   - section: "From 2002 to 2013 Shane and his business partner operated Brazee & McCormick, an independent full-service law firm in Lafayette. From there, McCormick Law Firm was born and a new chapter had begun."
   - section: "McCormick Law firm provides excellent legal representation for diverse clientele across Acadiana. Our practice areas include litigation services for criminal law, personal injury, family law, and more. Whether you’re faced with a drug charge, going through a divorce, or were injured at the hands of someone else, you need the most skilled and professional legal services available. Rely on an attorney that knows the system, to get you the fair compensation that you deserve. Trust an experienced attorney and legal team to have your back: anytime, anywhere. Trust McCormick Law Firm."
 one_column_section: >-
-  Our goal is to provide an effective legal strategy to reach a favorable outcome for our clients. We will properly evaluate your unique situation and guide you throughout the legal process. You can trust R.Shane McCormick to get the most favorable outcome for your case. Call now for a free consultation.
+  Our goal is to provide an effective legal strategy to reach a favorable outcome for our clients. We will properly evaluate your unique situation and guide you throughout the legal process. You can trust R. Shane McCormick to get the most favorable outcome for your case. Call now for a free consultation.
 ---
 
 {% assign general_data = site.data.general_settings %}
 
 <div>
 <section class="text-white">
-	<div class="pageHero__ImageWrapper pageHero__ImageWrapper--Halfs">
-	 {% if page.about_section.background_image_url %}
-	  <img class="pageHero__Image" src="{{ page.about_section.background_image_url }}" />
-	 {% endif %}
-	</div>
-	<div class="pt-5 " style="background: linear-gradient(180deg, #741625, #3a0b13); ">
-	    {% if page.about_section.title %}
-		 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-0 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
-		{% endif %}
-		{% if page.about_section.description %}
-		 <p class="fs-1 px-5 px-lg-0 pb-5 pb-lg-0 editable">{{ page.about_section.description }}</p>
-		{% endif %}
-		<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
-		 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
+<!--	<div class="pageHero__ImageWrapper pageHero__ImageWrapper&#45;&#45;Halfs">-->
+	<div class="px-0 mx-0 row d-none d-lg-flex">
+		<div class="d-none d-lg-flex px-0 col-6">
+			{% if page.about_section.background_image_url %}
+	<!--	  <img class="pageHero__Image" src="{{ page.about_section.background_image_url }}" />-->
+		  <img class="img-fluid object-fit-cover" src="{{ page.about_section.background_image_url }}" />
+			{% endif %}
+		</div>
+		<div class="pt-5 col-6" style="background: linear-gradient(180deg, #741625, #3a0b13); ">
+			{% if page.about_section.title %}
+			 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-0 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
+			{% endif %}
+			{% if page.about_section.description %}
+			 <p class="fs-1 px-5 px-lg-0 pb-5 pb-lg-0 editable">{{ page.about_section.description }}</p>
+			{% endif %}
+			<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
+			 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
+			</div>
 		</div>
 	</div>
-	<div class="pageHero__Form py-5 d-flex justify-content-center">
+	<div class="d-block d-lg-none">
+		<div class="pt-5" style="background: linear-gradient(180deg, #741625, #3a0b13); ">
+			{% if page.about_section.title %}
+			 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-0 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
+			{% endif %}
+			{% if page.about_section.description %}
+			 <p class="fs-1 px-5 px-lg-0 pb-5 pb-lg-0 editable">{{ page.about_section.description }}</p>
+			{% endif %}
+			<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
+			 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
+			</div>
+		</div>
+	</div>
+	<div class="pageHero__Form py-5 d-flex justify-content-center d-lg-none">
 	    {% if page.contact_section.title %}
 		 <h2 class="py-0 my-0 col-10 text-uppercase font-size-3rem d-lg-none">{{ page.contact_section.title }}</h2>
 		{% endif %}
-		<section class="formSection d-none">
-		    {% if page.contact_section.sub_title %}
-			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
-			{% endif %}
-			<form method="post" netlify-honeypot="bot-field" data-netlify="true" action="{{general_data.contact_form_action_url}}" name="contact" class="cfForm">
-				<input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />
-				<div class="formFlex">
-					<div class="formSmallInputs inputWrapper">
-						<input type="text" class="" name="NAME" placeholder="NAME" /><input type="text" class="" name="EMAIL" placeholder="EMAIL" />
-						<input type="text" class="" name="PHONE NUMBER" placeholder="PHONE NUMBER" />
-					</div>
-					<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
-				</div>
-				<input type="submit" class="formSubmit" value="submit" />
-			</form>
-		</section>
+<!--		<section class="formSection d-none">-->
+<!--		    {% if page.contact_section.sub_title %}-->
+<!--			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>-->
+<!--			{% endif %}-->
+<!--			<form method="post" netlify-honeypot="bot-field" data-netlify="true" action="{{general_data.contact_form_action_url}}" name="contact" class="cfForm">-->
+<!--				<input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />-->
+<!--				<div class="formFlex">-->
+<!--					<div class="formSmallInputs inputWrapper">-->
+<!--						<input type="text" class="" name="NAME" placeholder="NAME" /><input type="text" class="" name="EMAIL" placeholder="EMAIL" />-->
+<!--						<input type="text" class="" name="PHONE NUMBER" placeholder="PHONE NUMBER" />-->
+<!--					</div>-->
+<!--					<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>-->
+<!--				</div>-->
+<!--				<input type="submit" class="formSubmit" value="submit" />-->
+<!--			</form>-->
+<!--		</section>-->
+		<!--			<section class="formSection">-->
+<!--				{% if page.contact_section.sub_title %}-->
+<!--				 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>-->
+<!--				{% endif %}-->
+<!--				{% include form.html %}-->
+<!--			</section>-->
 	</div>
 </section>
 </div>
-<section class="sliceZone d-flex row px-0 mx-0 justify-content-center">
-	<div class="about-mobile-img mt-5 mb-3">
+
+<!--DESKTOP VERSION HERE-->
+
+<section class=" d-none d-lg-block sliceZone d-flex row px-0 mx-0 justify-content-center">
+	<div class="about-mobile-img mt-5 mb-3 d-lg-none">
 		{% for item in page.gallery %}
 		{% unless forloop.first %}
 		{% break %}
@@ -83,33 +109,114 @@ one_column_section: >-
 		<img src="{{ item.image_url }}" class="{% if forloop.first %} d-flex d-lg-none rounded-circle about-mobile-cover {% else %} {% endif %}" >
 		{% endfor %}
 	</div>
-<section class="aboutSection pt-0 px-0 mx-0">
-	<div class="d-flex justify-content-center ">
-		<div class="col-10 ">
+	<section class="d-flex flex-row pt-0 px-0 mx-0 d-flex justify-content">
+		<div class="d-flex flex-column mx-0 px-0 col-8 py-5 justify-content-center">
 			{% for item in page.description %}
-             <p class="py-3 "> {{ item.section }} </p>
-			{% endfor %}
-		</div>
-		<section class="formSection">
-		    {% if page.contact_section.sub_title %}
-			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
-			{% endif %}
-			{% include form.html %}
+			<div class="col-12 px-5">
+				 <p class="py-2 fs-4" style="text-align: justify;"> {{ item.section }} </p>
+			</div>
+			{%endfor%}
+			<section class="py-3 ">
+				<div class="col-10 d-flex justify-content-center justify-content-lg-start text-start px-5 mx-2">
+					<h5 class="text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">request a consultation</h5>
+					<h5 class="text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">request a consultation</h5>
+				</div>
+				<div class="d-flex justify-content-center">
+					<h5 class=" text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">+</h5>
+					<h5 class=" text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">+</h5>
+				</div>
+			</section>
+			<section class=" ">
+				<form action="https://formspree.io/f/mkndnqlr" method="POST"
+					  class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-12 px-5">
+					<div class="field-group inputs-container">
+						<div class="mb-3 ">
+							<input type="email" class="form-control" id="inputName" placeholder="NAME" style="background-color: #eef2f3;;">
+						</div>
+						<div class="mb-3 ">
+							<input type="email" class="form-control" id="inputEmail1" placeholder="EMAIL" style="background-color: #eef2f3;;">
+						</div>
+						<div class="mb-3 ">
+							<input type="text" class="form-control" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: #eef2f3;;">
+						</div>
+					</div>
+					<div class="field-group message-container">
+						<div class="mb-3 ">
+							<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: #eef2f3;;" ></textarea>
+						</div>
+						<input type="submit" class="d-none d-lg-block ms-lg-auto formSubmit-Desktop text-white bg-success" value="submit" />
+					</div>
+				</form>
 		</section>
-	</div>
-	<div class="aboutSection__Images d-none d-lg-block">
-	   {% for gallery in page.gallery %}
-		<div class="aboutSection__ImgWrapper">
-		  <img src="{{ gallery.image_url }}" class="aboutSection__Img" />
 		</div>
-       {% endfor %}
+		<div class="d-flex flex-column col-4 px-0">
+			{% for gallery in page.gallery %}
+			<div class="col-12">
+				<img src="{{ gallery.image_url }}" class="img-fluid w-100" />
+			</div>
+			{%endfor%}
+		</div>
+	</section>
+	<section class="justText fs-1" style="text-align: justify;">
+		{% if page.one_column_section %}
+		<p>
+		  {{ page.one_column_section }}
+		</p>
+		{% endif %}
+	</section>
+</section>
+
+
+
+<!--Mobile Version here-->
+
+<section class="d-block d-lg-none sliceZone d-flex row px-0 mx-0 justify-content-center">
+	<div class="about-mobile-img mt-5 mb-3 d-lg-none">
+		{% for item in page.gallery %}
+		{% unless forloop.first %}
+		{% break %}
+		{% endunless %}
+		<img src="{{ item.image_url }}" class="{% if forloop.first %} d-flex d-lg-none rounded-circle about-mobile-cover {% else %} {% endif %}" >
+		{% endfor %}
 	</div>
-</section>
-<section class="justText">
-{% if page.one_column_section %}
-	<p>
-	  {{ page.one_column_section }}
-	</p>
-{% endif %}
-</section>
+	<section class="aboutSection pt-0 px-0 mx-0">
+		<div class="d-flex justify-content-center ">
+			<div class="col-10 ">
+				{% for item in page.description %}
+				 <p class="py-3 "> {{ item.section }} </p>
+				{% endfor %}
+			</div>
+			<section class="formSection">
+				{% if page.contact_section.sub_title %}
+				 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
+				{% endif %}
+				{% include form.html %}
+			</section>
+		</div>
+		<div class=" d-block d-lg-block">
+		   {% for gallery in page.gallery %}
+			<div class="aboutSection__ImgWrapper">
+			  <img src="{{ gallery.image_url }}" class="aboutSection__Img" />
+			</div>
+		   {% endfor %}
+		</div>
+	</section>
+	<section class="justText order-1">
+		{% if page.one_column_section %}
+		<p>
+		  {{ page.one_column_section }}
+		</p>
+		{% endif %}
+	</section>
+	<section class=" order-2">
+		<div class="col-10 d-flex justify-content-center justify-content-lg-start text-start px-5 mx-2 pt-5">
+			<h5 class="text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">request a consultation</h5>
+			<h5 class="text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">request a consultation</h5>
+		</div>
+		<div class="d-flex justify-content-center">
+			<h5 class=" text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">+</h5>
+			<h5 class=" text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">+</h5>
+
+		</div>
+	</section>
 </section>
