--- a/_pages/criminal-law.html
+++ b/_pages/criminal-law.html
@@ -10,8 +10,7 @@ permalink: "/criminal-law"
 banner_section:
   title: "Criminal Law"
   lists:
-    - ARRESTED? UNSURE OF
-    - YOUR RIGHTS? CALL NOW!!!
+    - ARRESTED? UNSURE OF YOUR RIGHTS? CALL NOW!!!
   banner_image_url: "/assets/images/banner_6.jpg"
 
 contact_section:
@@ -46,69 +45,175 @@ services_section:
 
 {% assign general_data = site.data.general_settings %}
 
-<section class="hero pageHero pageHero--Collage">
-	<div class="pageHero__Text">
-		{% if page.banner_section.title %}
-		 <h1>{{ page.banner_section.title }}</h1>
-		{% endif %}
-		{% for list in page.banner_section.lists %}
-		 <p class="pageDesc pageHeroBreak">{{ list }}</p>
-		{% endfor %}
-		<div class="pageHero__Phone">
-		   <a href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
-		</div>
-	</div>
-	<div class="pageHero__Form">
-	    {% if page.contact_section.title %}
-		 <h2>{{ page.contact_section.title }}</h2>
-		{% endif %}
-		<section class="formSection">
-		    {% if page.contact_section.sub_title %}
-			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
-			{% endif %}
-			{% include form.html %}
-		</section>
-	</div>
-	{% if page.banner_section.banner_image_url %}
-	<div class="pageHero__ImageWrapper pageHero__ImageWrapper--TR">
-		<img class="pageHero__Image pageHero__Image--TR pageHero__ImageWrapper--TR" src="{{page.banner_section.banner_image_url}}" />
-	</div>
-	{% endif %}
-	{% if page.contact_section.banner_image_url %}
-	<div class="pageHero__ImageWrapper pageHero__ImageWrapper--BL">
-		<div class="blueBlock"></div>
-		<img class="pageHero__Image pageHero__Image--BL" src="{{page.contact_section.banner_image_url}}" />
-	</div>
-	{% endif %}
+<section>
+    <div class="container-fluid mx-0 px-0" style="background: linear-gradient(180deg, #741625, #3a0b13);">
+      <div class=" d-none d-lg-block">
+        <div class="row align-items-lg-center justify-content-center mx-0">
+          <div class="col-lg-6 col-xl-6  col col-xl ps-lg-5 ps-xl-5 pe-0 pe-xl-0">
+              {% if page.banner_section.title %}
+            <div class="d-flex justify-content-evenly col-12 col-xl-12 ps-xl-5 ps-5">
+                <div class="d-flex justify-content-center ps-xl-0 ps-0">
+                    <h1 class="col-lg-6 col-xl-6 col-9 font-size-7-rem text-white editable my-xl-0 lh-1">{{page.banner_section.title}}</h1>
+                </div>
+            </div>
+              {% endif %}
+              {% if page.banner_section.lists %}
+            <div class="d-flex ps-5 ps-xl-5 justify-content-evenly py-xl-2">
+                <div class="d-flex ps-5 ps-xl-0 justify-content-center col-xl-12 ms-xl-4 ">
+                    <p class="col-5 col-xl-6 text-white fs-1 editable f-weight-500 me-xl-4">{{ page.banner_section.lists }}</p>
+                </div>
+            </div>
+              {% endif %}
+          </div>
+          <div class="col-6 d-lg-flex d-none p-0">
+            {% if page.banner_section.banner_image_url %}
+              <div class="overflow-hidden w-100" style="height: 50em;">
+                 <img class="w-100 " src="{{ page.banner_section.banner_image_url }}" alt="banner">
+              </div>
+
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      <div class="d-block d-lg-none">
+          <div class="row py-5 mx-0 px-0">
+              <div class="col pt-5">
+                  {% if page.banner_section.title %}
+                  <div class="d-flex justify-content-around">
+                      <H1 class="col-10 text-white py-1 font-title editable">{{page.banner_section.title}}</H1>
+                  </div>
+                  {% endif %}
+              </div>
+              <div class="col-12 d-flex justify-content-center">
+                  {% if page.banner_section.lists %}
+                  <div class="col-10">
+                      <p class="text-white font-size-3rem f-weight-500 editable ">{{ page.banner_section.lists }}</p>
+                  </div>
+                  {% endif %}
+              </div>
+          </div>
+      </div>
+        <div class="col d-flex justify-content-center px-0 py-3 d-block d-lg-none " style="background-color: #70707040">
+            <div class=" ">
+              <a class="col-12 display-3 text-white link-underline link-underline-opacity-0 link-underline-opacity-0-hover font-size-3rem" href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
+            </div>
+        </div>
+        <div class="bg-success py-4 d-flex d-lg-none justify-content-center">
+            <div class="col-10 ">
+                <h2 class="font-size-3rem text-uppercase text-white editable">CONTACT US now for a consultation</h2>
+            </div>
+        </div>
+    </div>
+
 </section>
 
-{% assign service = page.services_section %}
-{% assign white = page.white_section %}
-<section class="sliceZone">
-	<section class="pageBody maxWidth">
-	    {% if white.title %}
-		<h3>{{ white.title }}</h3>
-		{% endif %}
-		{% if white.description %}
-		<p>{{ white.description }} </p>
-		{% endif %}
-	</section>
-	<section class="pagePrefooter">
-		<div class="pagePrefooter__Text">
-		   {% if service.title %}
-			<p>{{ service.title }}</p>
-			{% endif %}
-			{% if service.button_text %}
-			 <a class="prefooter__Button prefooter__Button--Desktop" href="{{service.button_url}}">{{service.button_text}}</a>
-			{% endif %}
-		</div>
-		<ul>
-		    {% for list in service.services %}
-			<li>{{ list.list }}</li>
-			{% endfor %}
-		</ul>
-		{% if service.button_text %}
-		 <a class="prefooter__Button prefooter__Button--Mobile" href="{{service.button_url}}">{{service.button_text}}</a>
-		{% endif %}
-	</section>
+<!--DESKTOP VERSION-->
+
+<section class="sliceZone d-lg-block d-none container-fluid px-0 mx-0">
+   {% assign sectionTwo = page.contact_section %}
+    <section class="allServices fs-3 ">
+        <div class="allServices__Service row mx-0 justify-content-end">
+            <div class="row mx-0 px-0 bg-success">
+                <div class="col-4 p-0 d-flex">
+                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
+                </div>
+
+<!--                <div class="d-flex col-8 justify-content-around pb-5">-->
+<!--                    <div class="allServices__Service__Text col-8 py-xl-5 py-lg-3">-->
+<!--                        {% if sectionTwo.title %}-->
+<!--                        <h3 class="px-4 fs-3  ">{{ sectionTwo.title }}</h3>-->
+<!--                        {% endif %}-->
+<!--                        {% if sectionTwo.subtitle %}-->
+<!--                        <p class="px-4 fs-4 ">{{ sectionTwo.subtitle }}</p>-->
+<!--                        {% endif %}-->
+<!--                        <div class="fs-4">-->
+<!--                            <div class="d-grid lh-sm">-->
+<!--                                <ul class="row ">-->
+<!--                                {% for list in sectionTwo.lists %}-->
+<!--                                  <div class="col-6 py-1">-->
+<!--                                    <li class="ps-1 col-10" style="">{{ list }}</li>-->
+<!--                                  </div>-->
+<!--                                {% endfor %}-->
+<!--                                </ul>-->
+<!--                            </div>-->
+<!--                        <div class=" ">-->
+<!--                            {% if sectionTwo.button_text %}-->
+<!--        &lt;!&ndash;                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>&ndash;&gt;-->
+<!--                            <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-xl-4 my-0" role="button">{{sectionTwo.button_text}}</a>-->
+<!--                            {% endif %}-->
+<!--                        </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+            </div>
+        </div>
+    </section>
 </section>
+
+
+<!--<section class="hero pageHero pageHero&#45;&#45;Collage">-->
+<!--	<div class="pageHero__Text">-->
+<!--		{% if page.banner_section.title %}-->
+<!--		 <h1>{{ page.banner_section.title }}</h1>-->
+<!--		{% endif %}-->
+<!--		{% for list in page.banner_section.lists %}-->
+<!--		 <p class="pageDesc pageHeroBreak">{{ list }}</p>-->
+<!--		{% endfor %}-->
+<!--		<div class="pageHero__Phone">-->
+<!--		   <a href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--	<div class="pageHero__Form">-->
+<!--	    {% if page.contact_section.title %}-->
+<!--		 <h2>{{ page.contact_section.title }}</h2>-->
+<!--		{% endif %}-->
+<!--		<section class="formSection">-->
+<!--		    {% if page.contact_section.sub_title %}-->
+<!--			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>-->
+<!--			{% endif %}-->
+<!--			{% include form.html %}-->
+<!--		</section>-->
+<!--	</div>-->
+<!--	{% if page.banner_section.banner_image_url %}-->
+<!--	<div class="pageHero__ImageWrapper pageHero__ImageWrapper&#45;&#45;TR">-->
+<!--		<img class="pageHero__Image pageHero__Image&#45;&#45;TR pageHero__ImageWrapper&#45;&#45;TR" src="{{page.banner_section.banner_image_url}}" />-->
+<!--	</div>-->
+<!--	{% endif %}-->
+<!--	{% if page.contact_section.banner_image_url %}-->
+<!--	<div class="pageHero__ImageWrapper pageHero__ImageWrapper&#45;&#45;BL">-->
+<!--		<div class="blueBlock"></div>-->
+<!--		<img class="pageHero__Image pageHero__Image&#45;&#45;BL" src="{{page.contact_section.banner_image_url}}" />-->
+<!--	</div>-->
+<!--	{% endif %}-->
+<!--</section>-->
+
+<!--{% assign service = page.services_section %}-->
+<!--{% assign white = page.white_section %}-->
+<!--<section class="sliceZone">-->
+<!--	<section class="pageBody maxWidth">-->
+<!--	    {% if white.title %}-->
+<!--		<h3>{{ white.title }}</h3>-->
+<!--		{% endif %}-->
+<!--		{% if white.description %}-->
+<!--		<p>{{ white.description }} </p>-->
+<!--		{% endif %}-->
+<!--	</section>-->
+<!--	<section class="pagePrefooter">-->
+<!--		<div class="pagePrefooter__Text">-->
+<!--		   {% if service.title %}-->
+<!--			<p>{{ service.title }}</p>-->
+<!--			{% endif %}-->
+<!--			{% if service.button_text %}-->
+<!--			 <a class="prefooter__Button prefooter__Button&#45;&#45;Desktop" href="{{service.button_url}}">{{service.button_text}}</a>-->
+<!--			{% endif %}-->
+<!--		</div>-->
+<!--		<ul>-->
+<!--		    {% for list in service.services %}-->
+<!--			<li>{{ list.list }}</li>-->
+<!--			{% endfor %}-->
+<!--		</ul>-->
+<!--		{% if service.button_text %}-->
+<!--		 <a class="prefooter__Button prefooter__Button&#45;&#45;Mobile" href="{{service.button_url}}">{{service.button_text}}</a>-->
+<!--		{% endif %}-->
+<!--	</section>-->
+<!--</section>-->
